--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vitepress preview docs"
   },
   "devDependencies": {
-    "vitepress": "^1.0.0"
+    "vitepress": "^1.0.0",
+    "gray-matter": "^4.0.3"
   }
 }
